--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,10 @@ share/python-wheels/
 *.egg
 MANIFEST
 
+# WiX Toolset
+InMemoryXml
+*.wixpdb
+
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
@@ -141,7 +145,6 @@ deb_dist
 .DS_Store
 tests/test_docs/**/*-safe.pdf
 tests/test_docs_large/
-install/windows/Dangerzone.wxs
 share/container.tar
 share/container.tar.gz
 share/image-id.txt
